[tool.poetry]
name = "vehicle-control"
version = "0.1.0"
description = ""
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "vehicle_control" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
