[tool.poetry]
name = "vehicle-control"
version = "0.1.0"
description = ""
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "vehicle_control" }]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
pybind11 = "^2.11.1"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
